4.3.7.1 release (#20)